# Hacienda-Shield

./: .gitignore  README.md  manifest.json  pyproject.toml  setup_hacienda_shield.bat  setup_hacienda_shield.py  setup_hacienda_shield.sh  setup_pii_shield.bat  setup_pii_shield.py  setup_pii_shield.sh
pii-contract-analyze/: SKILL.md
server/: eu_recognizers.py  hacienda_shield_server.py  pii_shield_server.py  pyproject.toml  review_ui.html
tests/: conftest.py  test_anonymization.py  test_chunking.py  test_eu_recognizers.py  test_false_positives.py  test_mapping.py  test_rebrand_compatibility.py
